<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:ignore="ResourceName">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="?attr/smToolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/simpleTitle"
            android:textColor="?attr/smToolbarText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="13dp"
            android:text="@string/simpleShare"
            android:textColor="?attr/smToolbarShareText"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/smContentBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simpleCrashInfo"
                android:textColor="?attr/smLabText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/smDescText"
                android:textSize="17sp"
                tools:text="TextView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#efefef" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simplePackageName"
                    android:textColor="?attr/smLabText"
                    android:textSize="@dimen/simple_text_item_size" />

                <TextView
                    android:id="@+id/tv_packageName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:textColor="?attr/smDescText"
                    android:textSize="@dimen/simple_text_item_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simpleClassName"
                    android:textColor="?attr/smLabText"
                    android:textSize="@dimen/simple_text_item_size" />

                <TextView
                    android:id="@+id/tv_className"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:textColor="?attr/smDescText"
                    android:textSize="@dimen/simple_text_item_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simpleFunName"
                    android:textColor="?attr/smLabText"
                    android:textSize="@dimen/simple_text_item_size" />

                <TextView
                    android:id="@+id/tv_methodName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:textColor="?attr/smDescText"
                    android:textSize="@dimen/simple_text_item_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simpleLineNum"
                    android:textColor="?attr/smLabText"
                    android:textSize="@dimen/simple_text_item_size" />

                <TextView
                    android:id="@+id/tv_lineNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:textColor="?attr/smDescText"
                    android:textSize="@dimen/simple_text_item_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simpleExceptionType"
                    android:textColor="?attr/smLabText"
                    android:textSize="@dimen/simple_text_item_size" />

                <TextView
                    android:id="@+id/tv_exceptionType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:textColor="?attr/smDescText"
                    android:textSize="@dimen/simple_text_item_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simpleTime"
                    android:textColor="?attr/smLabText"
                    android:textSize="@dimen/simple_text_item_size" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:textColor="?attr/smDescText"
                    android:textSize="@dimen/simple_text_item_size" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#efefef" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simpleModel"
                    android:textColor="?attr/smLabText"
                    android:textSize="@dimen/simple_text_item_size" />

                <TextView
                    android:id="@+id/tv_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:textColor="?attr/smDescText"
                    android:textSize="@dimen/simple_text_item_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simpleBrand"
                    android:textColor="?attr/smLabText"
                    android:textSize="@dimen/simple_text_item_size" />

                <TextView
                    android:id="@+id/tv_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:textColor="?attr/smDescText"
                    android:textSize="@dimen/simple_text_item_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simpleVersion"
                    android:textColor="?attr/smLabText"
                    android:textSize="@dimen/simple_text_item_size" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:textColor="?attr/smDescText"
                    android:textSize="@dimen/simple_text_item_size" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#efefef" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simpleAllInfo"
                android:textColor="?attr/smLabText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_fullException"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/smDescText"
                android:textSize="@dimen/simple_text_item_size" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>